# simple-kirolets

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
docs/: easypanel-deployment.md
src/simple_kirolets/: __init__.py  __main__.py  bot.py  config.py  github_workflow.py  progress.py
tests/: test_bot.py  test_config.py  test_github_workflow.py
