[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-kirolets"
version = "0.1.0"
description = "Single-service teaching version of Kirolets"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "python-dotenv>=1.0.1",
    "python-telegram-bot>=21.0,<22.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.5.0",
]

[project.scripts]
simple-kirolets = "simple_kirolets.bot:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py314"
